slider spacing issue on responsive fized

--- a/public/after_login/new_ui/css/tab-responsive.css
+++ b/public/after_login/new_ui/css/tab-responsive.css
@@ -55,7 +55,6 @@
    }
     .cust-gallery .swiper-slide.bg-white{
        width: 405px!important;
-       margin-right:30px!important;
    }
     .bg-white.shadow-lg .progress_text {
        font-size: 16px;
